# hackism

./: .gitattributes  Cargo.toml  LICENSE  Makefile  README.md  rustfmt.toml
.github/workflows/: actions.yml  ci.yml  release.yml
attic/20201127/benches/: pong_benchmark.rs
attic/20201127/examples/: parse.rs
attic/20201127/src/: location.rs  main.rs  scanner.rs
attic/20201207/: text.rs
benches/: pong_benchmark.rs
changelogs/: 0.1.0  0.2.0  0.3.0  0.4.0
examples/: parse.rs
src/: addr.rs  asm.rs  com.rs  comp.rs  dest.rs  dis.rs  gen.rs  generator.rs  hack.rs  inst.rs  jump.rs  label.rs  lex.rs  lib.rs  loc.rs  main.rs  parse.rs  parser.rs  pos.rs  prog.rs  program.rs  st.rs  symbol.rs  utilities.rs  utils.rs
src/asm/: addr.rs  comp.rs  dest.rs  inst.rs  jump.rs  label.rs  lex.rs  parser.rs  parser_todelete.rs  prog.rs  symbol.rs
src/com/: addr.rs  comp.rs  dest.rs  inst.rs  jump.rs  label.rs  symbol.rs
src/dis/: parser.rs  prog.rs  text_parser.rs
src/hack/: addr.rs  address.rs  cmd.rs  comp.rs  computation.rs  dec.rs  dest.rs  destination.rs  enc.rs  inst.rs  instruction.rs  jump.rs  label.rs  lexer.rs  parser.rs  predefined.rs  prog.rs  sym.rs  tokens.rs  var.rs
src/scanner/: ascii.rs  helpers.rs  tokens.rs
src/utilities/: location.rs  span.rs  testing.rs
src/utils/: buf.rs  conv.rs  loc.rs  parser.rs
tests/: asm_fixtures.rs  fixtures.rs  programs.rs
tests/asm/: spaces
tests/data/: Fill.asm  Max.asm  address_labels  address_numericals  assignments  branches  instructions  labels  name_address  reg_address
tests/fixtures/: Mult.asm  Mult.dis  Mult.hack
tests/programs/: Add.hack_bin  Fill.dis  Fill.hack_bin  Max.hack_bin  Mult.hack_bin  Rect.hack_bin
tests/snippets/: addr_labels.hack  addr_labels.hack_bin  addr_nums.hack  addr_nums.hack_bin  comments.asm  instructions.asm  instructions.hack  instructions.hack_bin  label.hack  label.hack_bin  labels.asm  named_addresses.asm  numeric_addresses.asm
(+4 files in other folders)
