[package]
name = "has"
version = "0.3.0"
description = "HACK Application Suite"
edition = "2018"
authors = ["Fred Morcos <fm@fredmorcos.com>"]
license = "MIT"
homepage = "https://github.com/fredmorcos/has"
repository = "https://github.com/fredmorcos/has"
readme = "README.md"
# documentation =
keywords = ["HACK", "JACK", "assembler", "emulator", "compiler"]
categories = ["command-line-utilities", "emulators", "parser-implementations"]

[lib]
name = "has"

[[bin]]
name = "has"

[dependencies]
structopt = "0.3"
env_logger = "0.7"
log = "0.4"
atoi = "0.3"
derive_more = "0.99"
derive-new = "0.5"
