[package]
name = "hackism"
version = "0.3.0"
description = "A HACK & JACK Application Suite"
edition = "2018"
authors = ["Fred Morcos <fm@fredmorcos.com>"]
license = "MIT"
homepage = "https://github.com/fredmorcos/hackism"
repository = "https://github.com/fredmorcos/hackism"
readme = "README.md"
# documentation =
keywords = ["HACK", "JACK", "assembler", "emulator", "compiler"]
categories = ["command-line-utilities", "emulators", "parser-implementations"]

[lib]
name = "hackism"

[dependencies]
structopt = "0.3"
env_logger = "0.9"
log = "0.4"
atoi = "1.0"
derive_more = "0.99"
derive-new = "0.5"
